--- a/Number 2/styles.css
+++ b/Number 2/styles.css
@@ -4,6 +4,8 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
@@ -29,4 +31,23 @@ a {
 }
 a:hover {
     color: #4f8342; 
+}
+input {
+    margin: auto;
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 5px;
+    border: 1px solid #dbffd6;
+    background-color: #000000;
+    color: #dbffd6;
+    text-align: center;
+
+}
+button {
+    margin: auto;
+    padding: 10px;
+    font-size: 20px;
+    background-color: #000000;
+    color: #dbffd6;
+    text-align: center;
 }
